--- a/drftask/docker-compose.yml
+++ b/drftask/docker-compose.yml
@@ -3,28 +3,34 @@ services:
   db:
     image: postgres:latest
     container_name: db_app
-    command: -p 5454
     expose:
-      - 5454
+      - 6000:5432
     env_file:
-      - .env-deploy
+      - .env-dev
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}"]
+      interval: 10s
+      retries: 5
+      start_period: 30s
+      timeout: 10s
 
   redis:
     image: redis:5
     container_name: redis_app
-    command: --port 5370
     expose:
-      - 5370
+      - 5370:6379
 
   app:
     build:
       context: .
     env_file:
-      - .env-deploy
+      - .env-dev
     container_name: drf_app
     command: bash -c "python manage.py migrate && python manage.py runserver 0.0.0.0:8000"
     ports:
       - 8001:8000
     depends_on:
-      - db
-      - redis
+      db:
+        condition: service_healthy
+      redis:
+        condition: service_started
